chore: add swagger documentation of GetAllCardsByAccountId
